finish CRUD and GET/POST, 404

--- a/memo/20191007.md
+++ b/memo/20191007.md
@@ -811,3 +811,557 @@ http://127.0.0.1:8000/board/articles/new/
 
 
 
+urls.py
+
+```python
+from django.urls import path
+from . import views
+
+app_name = 'board'
+
+urlpatterns = [
+    path('', views.index, name='index'),  # /board/ == board:index
+    # Read 글 목록(list) render
+    path('articles/', views.list, name='list'),
+    # Read 글 상세(detail) render
+    path('articles/<int:id>/', views.detail, name='detail'),
+
+    # Create 글 쓰기(new) render
+    path('articles/new/', views.new, name='new'),
+    # Create 글 저장(create)
+    path('articles/create/', views.create, name='create'),
+
+    # Update 글 수정쓰기(edit) render
+    path('articles/<int:id>/edit/', views.edit, name='edit'),
+    # Update 글 실제수정(update)
+    path('articles/<int:id>/update/', views.update, name='update'),
+
+    # Delete 글 삭제(delete)
+]
+```
+
+views.py
+
+```python
+from django.shortcuts import render, redirect
+from .models import Article
+
+def index(request):
+    return render(request, 'board/index.html')
+
+
+def list(request):
+    articles = Article.objects.all()  # [<A1>, <A2>, <A3>, ...] 이런 식으로 return
+    return render(request, 'board/list.html', {
+        'articles': articles,
+    })
+
+
+def detail(request, id):
+    article = Article.objects.get(id=id)  # <A_id>
+    return render(request, 'board/detail.html', {
+        'article': article,
+    })
+
+
+def new(request):
+    return render(request, 'board/new.html')
+
+
+def create(request):
+    article = Article()
+    article.title = request.POST.get('title')
+    article.content = request.POST.get('content')
+    article.save()
+
+    # return redirect(f'/board/articles/{article.id}')
+    return redirect('board:detail', article.id)
+
+
+def edit(request, id):
+    article = Article.objects.get(id=id)
+
+    return render(request, 'board/edit.html', {
+        'article': article,
+    })
+
+
+def update(request, id):
+    article = Article.object.get(id=id)
+    article.title = request.POST.get('title')
+    article.content = request.POST.get('content')
+    article.save()
+    return redirect('board:detail', article.id)
+```
+
+board-templates-board-edit.html 만들고
+
+```html
+{% extends 'board/base.html' %}
+{% block title %}Edit article{% endblock title %}
+
+{% block body %}
+<h1>Edit article</h1>
+
+<form action="{% url 'board:update' article.id %}" method="POST">
+    {% csrf_token %}
+    <label for=""></label>
+    <div>
+        <label for="title">제목:</label>
+        <input id="title" name="title" value="{{ article.title }}">
+    </div>
+    <div>
+        <label for="content">내용:</label>
+        <textarea id="content" name="content" cols="30" rows="10">{{ article.content}}</textarea>
+    </div>
+    <div>
+        <input type="submit" value="제출!">
+    </div>
+</form>
+{% endblock body %}
+```
+
+
+
+detail.html가서
+
+```html
+{% extends 'board/base.html' %}
+{% block title %}Article detail{% endblock title %}
+
+{% block body %}
+    <h1>{{ article.title }}</h1>
+    <p>
+        {{ article.content }}
+    </p>
+    <div>
+        <a href="{% url 'board:edit' article.id %}">  <!-- 하드코딩 /board/articles/{{article.id}}/edit -->
+            <button>Edit</button>
+        </a>    
+    </div>
+    <div>
+        <a href="">
+            <button>Delete</button>
+        </a>
+    </div>
+{% endblock body %}
+```
+
+
+
+urls.py
+
+```python
+from django.urls import path
+from . import views
+
+app_name = 'board'
+
+urlpatterns = [
+    path('', views.index, name='index'),  # /board/ == board:index
+    # Read 글 목록(list) render
+    path('articles/', views.list, name='list'),
+    # Read 글 상세(detail) render
+    path('articles/<int:id>/', views.detail, name='detail'),
+
+    # Create 글 쓰기(new) render
+    path('articles/new/', views.new, name='new'),
+    # Create 글 저장(create)
+    path('articles/create/', views.create, name='create'),
+
+    # Update 글 수정쓰기(edit) render
+    path('articles/<int:id>/edit/', views.edit, name='edit'),
+    # Update 글 실제수정(update)
+    path('articles/<int:id>/update/', views.update, name='update'),
+
+    # Delete 글 삭제(delete)
+    path('articles/<int:id>/delete', views.delete, name='delete'),
+]
+```
+
+
+
+views.py
+
+```python
+from django.shortcuts import render, redirect
+from .models import Article
+
+def index(request):
+    return render(request, 'board/index.html')
+
+
+def list(request):
+    articles = Article.objects.all()  # [<A1>, <A2>, <A3>, ...] 이런 식으로 return
+    return render(request, 'board/list.html', {
+        'articles': articles,
+    })
+
+
+def detail(request, id):
+    article = Article.objects.get(id=id)  # <A_id>
+    return render(request, 'board/detail.html', {
+        'article': article,
+    })
+
+
+def new(request):
+    return render(request, 'board/new.html')
+
+
+def create(request):
+    article = Article()
+    article.title = request.POST.get('title')
+    article.content = request.POST.get('content')
+    article.save()
+
+    # return redirect(f'/board/articles/{article.id}')
+    return redirect('board:detail', article.id)
+
+
+def edit(request, id):
+    article = Article.objects.get(id=id)
+
+    return render(request, 'board/edit.html', {
+        'article': article,
+    })
+
+
+def update(request, id):
+    article = Article.object.get(id=id)
+    article.title = request.POST.get('title')
+    article.content = request.POST.get('content')
+    article.save()
+    return redirect('board:detail', article.id)
+
+
+def delete(request, id):
+    article = Article.objects.get(id=id)
+    article.delete()
+    return redirect('board:list')
+```
+
+
+
+detail.html
+
+```html
+{% extends 'board/base.html' %}
+{% block title %}Article detail{% endblock title %}
+
+{% block body %}
+    <h1>{{ article.title }}</h1>
+    <p>
+        {{ article.content }}
+    </p>
+    <div>
+        <a href="{% url 'board:edit' article.id %}">  <!-- 하드코딩 /board/articles/{{article.id}}/edit -->
+            <button>수정</button>
+        </a>    
+    </div>
+    <div>
+        <form action="{% url 'board:delete' article.id %}" method="POST">
+            {% csrf_token %}
+            <input type="submit" value="삭제">
+        </form>
+    </div>
+{% endblock body %}
+```
+
+
+
+GET
+
+POST
+
+
+
+views.py에 import 추가
+
+```python
+from django.shortcuts import render, redirect
+from django.views.decorators.http import require_GET, require_POST
+from .models import Article
+
+
+@require_GET
+def index(request):
+    return render(request, 'board/index.html')
+
+
+@require_GET
+def list(request):
+    articles = Article.objects.all()  # [<A1>, <A2>, <A3>, ...] 이런 식으로 return
+    return render(request, 'board/list.html', {
+        'articles': articles,
+    })
+
+
+@require_GET
+def detail(request, id):
+    article = Article.objects.get(id=id)  # <A_id>
+    return render(request, 'board/detail.html', {
+        'article': article,
+    })
+
+
+@require_GET
+def new(request):
+    return render(request, 'board/new.html')
+
+
+@require_POST
+def create(request):
+    article = Article()
+    article.title = request.POST.get('title')
+    article.content = request.POST.get('content')
+    article.save()
+
+    # return redirect(f'/board/articles/{article.id}')
+    return redirect('board:detail', article.id)
+
+
+@require_GET
+def edit(request, id):
+    article = Article.objects.get(id=id)
+
+    return render(request, 'board/edit.html', {
+        'article': article,
+    })
+
+
+@require_POST
+def update(request, id):
+    article = Article.object.get(id=id)
+    article.title = request.POST.get('title')
+    article.content = request.POST.get('content')
+    article.save()
+    return redirect('board:detail', article.id)
+
+
+@require_POST  # 데코레이터. delete 함수에 대한 데코레이터
+def delete(request, id):
+    article = Article.objects.get(id=id)
+    article.delete()
+    return redirect('board:list')
+```
+
+
+
+http://127.0.0.1:8000/board/articles/1/
+
+없는 아이디 쓰면 
+
+로그 보면
+
+"GET /board/articles/1/ HTTP/1.1" 500 81013 
+
+5로 시작해서 개발자 잘못으로 나옴
+
+4로 나가는게 맞음
+
+views.py에 detail함수 고쳐야함(+import get_object_or404)
+
+수정하면
+
+404 오류로 나옴 No Article matches the given query.
+
+```python
+from django.shortcuts import render, redirect, get_object_or_404
+from django.views.decorators.http import require_GET, require_POST
+from .models import Article
+
+
+@require_GET
+def index(request):
+    return render(request, 'board/index.html')
+
+
+@require_GET
+def list(request):
+    articles = Article.objects.all()  # [<A1>, <A2>, <A3>, ...] 이런 식으로 return
+    return render(request, 'board/list.html', {
+        'articles': articles,
+    })
+
+
+@require_GET
+def detail(request, id):
+    article = get_object_or_404(Article, id=id)      
+    return render(request, 'board/detail.html', {
+        'article': article,
+    })
+
+
+@require_GET
+def new(request):
+    return render(request, 'board/new.html')
+
+
+@require_POST
+def create(request):
+    article = Article()
+    article.title = request.POST.get('title')
+    article.content = request.POST.get('content')
+    article.save()
+
+    # return redirect(f'/board/articles/{article.id}')
+    return redirect('board:detail', article.id)
+
+
+@require_GET
+def edit(request, id):
+    # article = Article.objects.get(id=id)
+    article = get_object_or_404(Article, id=id)
+    return render(request, 'board/edit.html', {
+        'article': article,
+    })
+
+
+@require_POST
+def update(request, id):
+    # article = Article.object.get(id=id)
+    article = get_object_or_404(Article, id=id)
+    article.title = request.POST.get('title')
+    article.content = request.POST.get('content')
+    article.save()
+    return redirect('board:detail', article.id)
+
+
+@require_POST  # 데코레이터. delete 함수에 대한 데코레이터
+def delete(request, id):
+    article = get_object_or_404(Article, id=id)
+    article.delete()
+    return redirect('board:list')
+```
+
+
+
+detail.html
+
+```html
+{% extends 'board/base.html' %}
+{% block title %}Article detail{% endblock title %}
+
+{% block body %}
+    <h1>{{ article.title }}</h1>
+    <p>
+        {{ article.content }}
+    </p>
+    <div>
+        <a href="{% url 'board:edit' article.id %}">  <!-- 하드코딩 /board/articles/{{article.id}}/edit -->
+            <button>수정</button>
+        </a>    
+    </div>
+    <div>
+        <form action="{% url 'board:delete' article.id %}" method="POST">
+            {% csrf_token %}
+            <input type="submit" value="삭제" onclick="return confirm('ㄹㅇ?')">
+        </form>
+    </div>
+{% endblock body %}
+```
+
+
+
+detail.html - javascript
+
+```html
+{% extends 'board/base.html' %}
+{% block title %}Article detail{% endblock title %}
+
+{% block body %}
+    <h1>{{ article.title }}</h1>
+    <p>
+        {{ article.content }}
+    </p>
+    <div>
+        <a href="{% url 'board:edit' article.id %}">  <!-- 하드코딩 /board/articles/{{article.id}}/edit -->
+            <button>수정</button>
+        </a>    
+    </div>
+    <div>
+        <form action="{% url 'board:delete' article.id %}" method="POST">
+            {% csrf_token %}
+            {% comment %} <input type="submit" value="삭제" onclick="return confirm('ㄹㅇ?')"> {% endcomment %}
+            <input id="delButton" type="submit" value="삭제">
+        </form>
+    </div>
+
+    <script>
+        const delButton = document.querySelector('#delButton');
+        function popUp () {
+            return confirm('ㄹㅇ?');
+        }
+
+        delButton.addEventListener('click', popUp);
+    </script>
+{% endblock body %}
+```
+
+```html
+{% extends 'board/base.html' %}
+{% block title %}Article detail{% endblock title %}
+
+{% block body %}
+    <h1>{{ article.title }}</h1>
+    <p>
+        {{ article.content }}
+    </p>
+    <div>
+        <a href="{% url 'board:edit' article.id %}">  <!-- 하드코딩 /board/articles/{{article.id}}/edit -->
+            <button>수정</button>
+        </a>    
+    </div>
+    <div>
+        <form action="{% url 'board:delete' article.id %}" method="POST">
+            {% csrf_token %}
+            {% comment %} <input type="submit" value="삭제" onclick="return confirm('ㄹㅇ?')"> {% endcomment %}
+            <input id="delButton" type="submit" value="삭제">
+        </form>
+    </div>
+
+    <script>
+        const delButton = document.querySelector('#delButton');
+        function popUp () {
+            return confirm('ㄹㅇ?');
+        }
+
+        delButton.addEventListener('mouseover', popUp);
+    </script>
+{% endblock body %}
+```
+
+```html
+{% extends 'board/base.html' %}
+{% block title %}Article detail{% endblock title %}
+
+{% block body %}
+    <h1>{{ article.title }}</h1>
+    <p>
+        {{ article.content }}
+    </p>
+    <div>
+        <a href="{% url 'board:edit' article.id %}">  <!-- 하드코딩 /board/articles/{{article.id}}/edit -->
+            <button>수정</button>
+        </a>    
+    </div>
+    <div>
+        <form action="{% url 'board:delete' article.id %}" method="POST">
+            {% csrf_token %}
+            {% comment %} <input type="submit" value="삭제" onclick="return confirm('ㄹㅇ?')"> {% endcomment %}
+            <input id="delButton" type="submit" value="삭제">
+        </form>
+    </div>
+
+    <script>
+        const delButton = document.querySelector('#delButton');
+        function writeHi () {
+            document.write('Hi');
+        }
+
+        delButton.addEventListener('mouseover', writeHi);
+    </script>
+{% endblock body %}
+```
+
