--- a/memo/20191008.md
+++ b/memo/20191008.md
@@ -566,3 +566,107 @@ admin.site.register(Article, ArticleModelAdmin)
 
 Command + Shift + s - 스크린샷
 
+
+
+board에 forms.py 만들기
+
+```python
+from django import forms
+from .models import Article
+
+# forms.Form => Data 입력 및 검증
+
+class ArticleModelForm(forms.ModelForm):
+    # 1. Data 입력 및 검증
+    # 2. HTML 생성
+    title = forms.CharField(min_length=2)
+    class Meta:
+        model = Article
+        fields = '__all__'
+```
+
+views.py
+
+```python
+from django.shortcuts import render, redirect, get_object_or_404
+from django.views.decorators.http import require_GET, require_POST
+
+from .models import Article
+from .forms import ArticleModelForm
+
+@require_GET
+def index(request):
+    return render(request, 'board/index.html')
+
+
+@require_GET
+def list(request):
+    articles = Article.objects.all()  # [<A1>, <A2>, <A3>, ...] 이런 식으로 return
+    return render(request, 'board/list.html', {
+        'articles': articles,
+    })
+
+
+@require_GET
+def detail(request, id):
+    article = get_object_or_404(Article, id=id)      
+    return render(request, 'board/detail.html', {
+        'article': article,
+    })
+
+
+def new(request):
+    if request.method == 'POST':
+        form = ArticleModelForm(request.POST)
+        
+        if form.is_valid():
+            article = form.save()
+            return redirect(article)
+    else:
+        form = ArticleModelForm()
+
+    return render(request, 'board/new.html', {
+        'form': form,
+    })
+
+
+def edit(request, id):
+    article = get_object_or_404(Article, id=id)
+    if request.method == 'POST':        
+        article.title = request.POST.get('title')
+        article.content = request.POST.get('content')
+        article.save()
+        return redirect(article)
+    else:
+        return render(request, 'board/edit.html', {
+            'article': article,
+        })
+
+
+@require_POST  # 데코레이터. delete 함수에 대한 데코레이터
+def delete(request, id):
+    article = get_object_or_404(Article, id=id)
+    article.delete()
+    return redirect('board:list')
+```
+
+new.html
+
+```html
+{% extends 'board/base.html' %}
+{% block title %}New article{% endblock title %}
+
+{% block body %}
+<h1>New article</h1>
+<form method="POST">
+    {% csrf_token %}
+    {{ form.as_p }}
+    <input type="submit">
+</form>
+
+{% comment %} board:create => board:new {% endcomment %}
+{% comment %} <form action="{% url 'board:new' %}" method="POST"> {% endcomment %}
+{% comment %} {% include 'board/_form.html' %} {% endcomment %}
+{% endblock body %}
+```
+
