--- a/memo/20191010.md
+++ b/memo/20191010.md
@@ -517,7 +517,7 @@ def edit():
     pass
 
 def detail(request, id):
-    article = get_objects_or_404(Article, id=id)
+    article = get_object_or_404(Article, id=id)
     return render(request, 'board/detail.html', {
         'article': article,
     })
@@ -660,7 +660,7 @@ def edit(request):
     pass
 
 def detail(request, id):
-    article = get_objects_or_404(Article, id=id)
+    article = get_object_or_404(Article, id=id)
     return render(request, 'board/detail.html', {
         'article': article,
     })
@@ -762,5 +762,854 @@ def delete(request):
     article = get_object_or_404(Article, id=id)
     article.delete()
     return redirect('board:list')
+```
+
+
+
+pjt = 시그마app
+
+app은 기능단위(ex. 예매, 커뮤니티 .., 회원가입)
+
+accounts 회원가입 <- 따로  //
+
+앱들이 유기적으로 합쳐져서 하나의 프로젝트가 됨
+
+
+
+models.py
+
+```python
+from django.db import models
+from django.urls import reverse
+
+
+class Article(models.Model):
+    title = models.CharField(max_length=100, null=False)
+    content = models.TextField()
+
+    # 인스턴스 메서드. 디테일 페이지가 있을 경우 유용
+    def get_absolute_url(self):  # detail page 가 있을 때 쓰는거임
+        return reverse("board:detail", kwargs={"id": self.id})
+
+# Article은 변수라서 Article 클래스와 Comment 클래스 자리 못 바꿈
+class Comment(models.Model):
+    content = models.CharField(max_length=200)  # max_length는 잘라버림. 200 넘어가면 절삭
+    # article_id는 외부에 어떤 것을 가져오는 거라서 ForeignKey
+    # Article을 참조하겠다
+    # CASCADE 원주인이 날라가면 (댓글들) 다 지우겠다
+    # on_delete=models.CASCADE 꼭 써야함
+    article = models.ForeignKey(Article, on_delete=models.CASCADE)
+```
+
+
+
+`python manage.py makemigrations board`  <- 견적. 바뀌면 견적 또 받으면 됨. 또 견적서 나옴.
+
+002_comment.py 견적서 생김. 테이블은 안생긴상태
+
+`python manage.py migrate board`  <- 실제로 만들기. 견적 다 합쳐서
+
+
+
+forms.py
+
+```python
+from django import forms
+from .models import Article, Comment
+
+# forms.Form => Data 입력 및 검증
+# forms.ModelForm => Data 입력/검증 + HTML 생성
+
+# ArticleModelForm은 유효성 검사
+class ArticleModelForm(forms.ModelForm):
+    # 1. Data 입력 및 검증
+    # 2. HTML 생성
+    # title = forms.CharField(min_length=3, required=False)  # 주석처리해도 상관없음
+    title = forms.CharField(min_length=2, max_length=100)
+    # 핵심인 데이터 저장
+    class Meta:
+        model = Article  # 핵심
+        fields = '__all__'
+
+class CommentModelForm(forms.ModelForm):
+    content = forms.CharField(min_length=2, max_length=200)  # 200 을 검증
+
+    class Meta:
+        model = Comment
+        fields = '__all__'
+```
+
+
+
+`python manage.py makemigrations && python manage.py migrate`
+
+`python manage.py shell_plus --print-sql`
+
+article = Article.objects.create(title='1번글', content='1번 내용')
+
+comment = Comment()
+
+comment
+
+comment.content = '1번 댓글'
+
+현재 상황은
+
+Article
+
+| id   | title | content  |
+| ---- | ----- | -------- |
+| 1    | 1번글 | 1번 내용 |
+|      |       |          |
+
+Comment
+
+| id   | content  | article_id |
+| ---- | -------- | ---------- |
+|      | 1번 댓글 |            |
+|      |          |            |
+
+
+
+comment.article_id = 1
+
+article
+
+comment.save()
+
+
+
+c2 = Comment.objects.create(content='nono', article_id=4)
+
+c3 = Comment.objects.create(content='yesyes', article_id=4)
+
+c3
+
+c3.content
+
+c3.article_id
+
+
+
+Comment
+
+| id   | content  | article_id |
+| ---- | -------- | ---------- |
+| 1    | 1번 댓글 | 4          |
+| 2    | nono     | 4          |
+| 3    | yesyes   | 4          |
+
+
+
+Article.objects.get(id=c3.article_id)
+
+c3.article
+
+
+
+```
+Comment.objects.filter(article_id=a.id)
+
+a.comment_set.all()
+
+Article.objects.all()
+```
+
+
+
+views.py - import랑 detail 함수 수정
+
+```python
+from django.shortcuts import render, redirect, get_object_or_404
+from django.views.decorators.http import require_GET, require_POST, require_http_methods
+
+from .models import Article, Comment
+from .forms import ArticleModelForm, CommentModelForm
+
+from IPython import embed
+
+# CRUD
+@require_http_methods(['GET', 'POST'])
+def new(request):
+    # 요청이 GET/POST 인지 확인한다.
+    # 만약 POST 라면
+    if request.method == 'POST':
+        # ArticleModelForm 의 인스턴스를 생성하고 Data 를 채운다(binding).
+        form = ArticleModelForm(request.POST)
+        # embed()  # 디버깅용
+        # binding 된 form 이 유효한지 체크한다.
+        if form.is_valid():
+            # 유효하다면 form 을 저장한다.
+            article = form.save()
+            # 저장한 article detail 로 redirect 한다.
+            return redirect(article)
+            # return redirect('board:detail', article.id)를 많이 써서
+            # models.py에 Article 클래스에 get_absolute_url 메서드가 있어서 줄일 수 있음
+        # form 이 유효하지 않다면,
+        # else:
+        #     # 유효하지 않은 입력데이터를 담은 HTML과 에러메세지를 사용자한테 보여준다.
+        #     return render(request, 'board/new.html', {
+        #         'form': form,
+        #     })
+
+    # GET 이라면
+    else: 
+        # 비어있는 form(HTML 생성기) 을 만든다.
+        form = ArticleModelForm()
+    # embed()
+        # form 과 html 을 사용자에게 보여준다.
+    return render(request, 'board/new.html', {
+        'form': form,
+    })
+
+@require_GET
+def list(request):
+    articles = Article.objects.all()
+    return render(request, 'board/list.html', {
+        'articles': articles,
+    })
+
+@require_http_methods(['GET', 'POST'])
+def edit(request, id):
+    # 게시글 찾기
+    article = get_object_or_404(Article, id=id)
+    # 제출할께요
+    if request.method == 'POST':  # 데이터가 날라왔다면
+        # 데이터 넘어온거 받는거
+        form = ArticleModelForm(request.POST, instance=article)  # 데이터를 넣은 다음에
+        if form.is_valid():  # 저장할만하면
+            article = form.save()  # 저장(작성)
+            return redirect(article)  # detail 페이지로 가기
+        '''    
+        else:  # 유효하지 않다면(form은 존재함)
+            return render(request, 'board/edit.html', {
+                'form': form,
+            })
+        '''
+    # 수정할께요 종이주세요
+    else:
+        # article = get_object_or_404(Article, id=id)
+        # embed()
+        form = ArticleModelForm(instance=article)
+    return render(request, 'board/edit.html', {
+        'form': form,
+    })        
+
+@require_GET
+def detail(request, id):
+    article = get_object_or_404(Article, id=id)
+    comments = article.comment_set.all()  # Comment.objects.filter(article_id=article.id) 
+
+    return render(request, 'board/detail.html', {
+        'article': article,
+        'comments': comments,
+    })
+
+@require_POST
+def delete(request):
+    article = get_object_or_404(Article, id=id)
+    article.delete()
+    return redirect('board:list')
+
+"""
+c = Comment()
+c.content = request.POST.get('content')
+c.article_id = 1
+c.save()
+"""
+```
+
+
+
+detail.html
+
+```html
+{% extends 'board/base.html' %}
+{% block title %}Article detail{% endblock title %}
+
+{% block body %}
+    <h1>{{ article.title }}</h1>
+    <p>
+        {{ article.content }}
+    </p>
+    <div>
+        <a href="{% url 'board:edit' article.id %}">  <!-- 하드코딩 /board/articles/{{article.id}}/edit -->
+            <button>수정</button>
+        </a>    
+    </div>
+    <div>
+        <form action="{% url 'board:delete' article.id %}" method="POST">
+            {% csrf_token %}
+            {% comment %} <input type="submit" value="삭제" onclick="return confirm('ㄹㅇ?')"> {% endcomment %}
+            <input id="delButton" type="submit" value="삭제">
+        </form>
+    </div>
+
+    {% comment %} <script>
+        const delButton = document.querySelector('#delButton');
+        function writeHi () {
+            document.write('Hi');
+        }
+
+        delButton.addEventListener('mouseover', writeHi);
+    </script> {% endcomment %}
+    
+    {% if comments %}
+        <ul>
+            {% for comment in comments %}
+                <li>{{ comment.content }}</li>
+            {% endfor %}
+        </ul>
+    {% endif %}
+{% endblock body %}
+```
+
+
+
+views.py - create 함수 생성
+
+```python
+from django.shortcuts import render, redirect, get_object_or_404
+from django.views.decorators.http import require_GET, require_POST, require_http_methods
+
+from .models import Article, Comment
+from .forms import ArticleModelForm, CommentModelForm
+
+from IPython import embed
+
+# CRUD
+@require_http_methods(['GET', 'POST'])
+def new(request):
+    # 요청이 GET/POST 인지 확인한다.
+    # 만약 POST 라면
+    if request.method == 'POST':
+        # ArticleModelForm 의 인스턴스를 생성하고 Data 를 채운다(binding).
+        form = ArticleModelForm(request.POST)
+        # embed()  # 디버깅용
+        # binding 된 form 이 유효한지 체크한다.
+        if form.is_valid():
+            # 유효하다면 form 을 저장한다.
+            article = form.save()
+            # 저장한 article detail 로 redirect 한다.
+            return redirect(article)
+            # return redirect('board:detail', article.id)를 많이 써서
+            # models.py에 Article 클래스에 get_absolute_url 메서드가 있어서 줄일 수 있음
+        # form 이 유효하지 않다면,
+        # else:
+        #     # 유효하지 않은 입력데이터를 담은 HTML과 에러메세지를 사용자한테 보여준다.
+        #     return render(request, 'board/new.html', {
+        #         'form': form,
+        #     })
+
+    # GET 이라면
+    else: 
+        # 비어있는 form(HTML 생성기) 을 만든다.
+        form = ArticleModelForm()
+    # embed()
+        # form 과 html 을 사용자에게 보여준다.
+    return render(request, 'board/new.html', {
+        'form': form,
+    })
+
+@require_GET
+def list(request):
+    articles = Article.objects.all()
+    return render(request, 'board/list.html', {
+        'articles': articles,
+    })
+
+@require_http_methods(['GET', 'POST'])
+def edit(request, id):
+    # 게시글 찾기
+    article = get_object_or_404(Article, id=id)
+    # 제출할께요
+    if request.method == 'POST':  # 데이터가 날라왔다면
+        # 데이터 넘어온거 받는거
+        form = ArticleModelForm(request.POST, instance=article)  # 데이터를 넣은 다음에
+        if form.is_valid():  # 저장할만하면
+            article = form.save()  # 저장(작성)
+            return redirect(article)  # detail 페이지로 가기
+        '''    
+        else:  # 유효하지 않다면(form은 존재함)
+            return render(request, 'board/edit.html', {
+                'form': form,
+            })
+        '''
+    # 수정할께요 종이주세요
+    else:
+        # article = get_object_or_404(Article, id=id)
+        # embed()
+        form = ArticleModelForm(instance=article)
+    return render(request, 'board/edit.html', {
+        'form': form,
+    })        
+
+@require_GET
+def detail(request, id):
+    article = get_object_or_404(Article, id=id)
+    comments = article.comment_set.all()  # Comment.objects.filter(article_id=article.id)
+
+    return render(request, 'board/detail.html', {
+        'article': article,
+        'comments': comments,
+    })
+
+@require_POST
+def delete(request):
+    article = get_object_or_404(Article, id=id)
+    article.delete()
+    return redirect('board:list')
+
+@require_POST
+def create(request):
+    comment = Comment()
+    comment.content = 'test comment'
+    comment.article_id = 1
+    comment.save()
+    return redirect()
+    
+"""
+c = Comment()
+c.content = request.POST.get('content')
+c.article_id = 1
+c.save()
+"""
+```
+
+
+
+urls.py
+
+```python
+from django.urls import path
+from . import views
+
+app_name = 'board'
+
+urlpatterns = [
+    # path('', views.index, name='index'),  # /board/ == board:index
+    # Read 글 목록(list) render
+    path('articles/', views.article_list, name='article_list'),
+    # Read 글 상세(detail) render
+    path('articles/<int:id>/', views.article_detail, name='article_detail'),
+
+    # Create 글 쓰기(new) render
+    path('articles/new/', views.new_article, name='new_article'),
+    # # Create 글 저장(create)
+    # path('articles/create/', views.create, name='create'),
+
+    # Update 글 수정쓰기(edit) render
+    path('articles/<int:id>/edit/', views.edit_article, name='edit_article'),
+
+    # Delete 글 삭제(delete)
+    path('articles/<int:id>/delete', views.delete_article, name='delete_article'),
+
+    # Comment Create
+    path('comments/new/', views.new_comment, name='new_comment'),
+]
+```
+
+
+
+views.py - 함수 이름 다 바꿈
+
+```python
+from django.shortcuts import render, redirect, get_object_or_404
+from django.views.decorators.http import require_GET, require_POST, require_http_methods
+
+from .models import Article, Comment
+from .forms import ArticleModelForm, CommentModelForm
+
+from IPython import embed
+
+# CRUD
+@require_http_methods(['GET', 'POST'])
+def new_article(request):
+    # 요청이 GET/POST 인지 확인한다.
+    # 만약 POST 라면
+    if request.method == 'POST':
+        # ArticleModelForm 의 인스턴스를 생성하고 Data 를 채운다(binding).
+        form = ArticleModelForm(request.POST)
+        # embed()  # 디버깅용
+        # binding 된 form 이 유효한지 체크한다.
+        if form.is_valid():
+            # 유효하다면 form 을 저장한다.
+            article = form.save()
+            # 저장한 article detail 로 redirect 한다.
+            return redirect(article)
+            # return redirect('board:article_detail', article.id)를 많이 써서
+            # models.py에 Article 클래스에 get_absolute_url 메서드가 있어서 줄일 수 있음
+        # form 이 유효하지 않다면,
+        # else:
+        #     # 유효하지 않은 입력데이터를 담은 HTML과 에러메세지를 사용자한테 보여준다.
+        #     return render(request, 'board/new.html', {
+        #         'form': form,
+        #     })
+
+    # GET 이라면
+    else: 
+        # 비어있는 form(HTML 생성기) 을 만든다.
+        form = ArticleModelForm()
+    # embed()
+        # form 과 html 을 사용자에게 보여준다.
+    return render(request, 'board/new.html', {
+        'form': form,
+    })
+
+@require_GET
+def article_list(request):
+    articles = Article.objects.all()
+    return render(request, 'board/list.html', {
+        'articles': articles,
+    })
+
+@require_http_methods(['GET', 'POST'])
+def edit_article(request, id):
+    # 게시글 찾기
+    article = get_object_or_404(Article, id=id)
+    # 제출할께요
+    if request.method == 'POST':  # 데이터가 날라왔다면
+        # 데이터 넘어온거 받는거
+        form = ArticleModelForm(request.POST, instance=article)  # 데이터를 넣은 다음에
+        if form.is_valid():  # 저장할만하면
+            article = form.save()  # 저장(작성)
+            return redirect(article)  # detail 페이지로 가기
+        '''    
+        else:  # 유효하지 않다면(form은 존재함)
+            return render(request, 'board/edit.html', {
+                'form': form,
+            })
+        '''
+    # 수정할께요 종이주세요
+    else:
+        # article = get_object_or_404(Article, id=id)
+        # embed()
+        form = ArticleModelForm(instance=article)
+    return render(request, 'board/edit.html', {
+        'form': form,
+    })        
+
+@require_GET
+def article_detail(request, id):
+    article = get_object_or_404(Article, id=id)
+    comments = article.comment_set.all()  # Comment.objects.filter(article_id=article.id)
+
+    return render(request, 'board/detail.html', {
+        'article': article,
+        'comments': comments,
+    })
+
+@require_POST
+def delete_article(request):
+    article = get_object_or_404(Article, id=id)
+    article.delete()
+    return redirect('board:article_list')
+
+@require_POST
+def new_comment(request):
+    comment = Comment()
+    comment.content = 'test comment'
+    comment.article_id = 1
+    comment.save()
+    return redirect()
+    
+"""
+c = Comment()
+c.content = request.POST.get('content')
+c.article_id = 1
+c.save()
+"""
+```
+
+models.py - article_detail로 수정
+
+```python
+from django.db import models
+from django.urls import reverse
+
+
+class Article(models.Model):
+    title = models.CharField(max_length=100, null=False)
+    content = models.TextField()
+
+    # 인스턴스 메서드. 디테일 페이지가 있을 경우 유용
+    def get_absolute_url(self):  # detail page 가 있을 때 쓰는거임
+        return reverse("board:article_detail", kwargs={"article_id": self.id})
+
+# Article은 변수라서 Article 클래스와 Comment 클래스 자리 못 바꿈
+class Comment(models.Model):
+    content = models.CharField(max_length=200)  # max_length는 잘라버림. 200 넘어가면 절삭
+    # article_id는 외부에 어떤 것을 가져오는 거라서 ForeignKey
+    # Article을 참조하겠다
+    # CASCADE 원주인이 날라가면 (댓글들) 다 지우겠다
+    # on_delete=models.CASCADE 꼭 써야함
+    article = models.ForeignKey(Article, on_delete=models.CASCADE)
+```
+
+detail.html
+
+```html
+{% extends 'board/base.html' %}
+{% block title %}Article detail{% endblock title %}
+
+{% block body %}
+    <h1>{{ article.title }}</h1>
+    <p>
+        {{ article.content }}
+    </p>
+    <div>
+        <a href="{% url 'board:edit_article' article.id %}">  <!-- 하드코딩 /board/articles/{{article.id}}/edit -->
+            <button>수정</button>
+        </a>    
+    </div>
+    <div>
+        <form action="{% url 'board:delete_article' article.id %}" method="POST">
+            {% csrf_token %}
+            {% comment %} <input type="submit" value="삭제" onclick="return confirm('ㄹㅇ?')"> {% endcomment %}
+            <input type="submit" value="삭제">
+        </form>
+    </div>
+
+    {% comment %} <script>
+        const delButton = document.querySelector('#delButton');
+        function writeHi () {
+            document.write('Hi');
+        }
+
+        delButton.addEventListener('mouseover', writeHi);
+    </script> {% endcomment %}
+    
+    {% if comments %}
+        <ul>
+            {% for comment in comments %}
+                <li>{{ comment.content }}</li>
+            {% endfor %}
+        </ul>
+    {% endif %}
+{% endblock body %}
+```
+
+list.html
+
+```html
+{% extends 'board/base.html' %}
+{% block title %}Article list{% endblock title %}
+
+{% block body %}
+<h1>This is Article list</h1>
+<a href="{% url 'board:new_article' %}">New article</a>
+
+{% if articles %}
+    <ul>
+        {% for article in articles %}  <!-- [<A1>, <A2>, <A3>] -->
+            <li>
+                <a href="{{ article.get_absolute_url }}">
+                    {{ article.title }}
+                </a>
+                {% comment %} /board/articles/{{article.id}} {% endcomment %}
+            </li>  <!-- <A1> -->
+        {% endfor%}
+    </ul>
+{% endif %}
+
+{% endblock body %}
+```
+
+views.py
+
+```python
+from django.shortcuts import render, redirect, get_object_or_404
+from django.views.decorators.http import require_GET, require_POST, require_http_methods
+
+from .models import Article, Comment
+from .forms import ArticleModelForm, CommentModelForm
+
+from IPython import embed
+
+# CRUD
+@require_http_methods(['GET', 'POST'])
+def new_article(request):
+    # 요청이 GET/POST 인지 확인한다.
+    # 만약 POST 라면
+    if request.method == 'POST':
+        # ArticleModelForm 의 인스턴스를 생성하고 Data 를 채운다(binding).
+        form = ArticleModelForm(request.POST)
+        # embed()  # 디버깅용
+        # binding 된 form 이 유효한지 체크한다.
+        if form.is_valid():
+            # 유효하다면 form 을 저장한다.
+            article = form.save()
+            # 저장한 article detail 로 redirect 한다.
+            return redirect(article)
+            # return redirect('board:article_detail', article.id)를 많이 써서
+            # models.py에 Article 클래스에 get_absolute_url 메서드가 있어서 줄일 수 있음
+        # form 이 유효하지 않다면,
+        # else:
+        #     # 유효하지 않은 입력데이터를 담은 HTML과 에러메세지를 사용자한테 보여준다.
+        #     return render(request, 'board/new.html', {
+        #         'form': form,
+        #     })
+
+    # GET 이라면
+    else: 
+        # 비어있는 form(HTML 생성기) 을 만든다.
+        form = ArticleModelForm()
+    # embed()
+        # form 과 html 을 사용자에게 보여준다.
+    return render(request, 'board/new.html', {
+        'form': form,
+    })
+
+@require_GET
+def article_list(request):
+    articles = Article.objects.all()
+    return render(request, 'board/list.html', {
+        'articles': articles,
+    })
+
+@require_http_methods(['GET', 'POST'])
+def edit_article(request, article_id):
+    # 게시글 찾기
+    article = get_object_or_404(Article, id=article_id)
+    # 제출할께요
+    if request.method == 'POST':  # 데이터가 날라왔다면
+        # 데이터 넘어온거 받는거
+        form = ArticleModelForm(request.POST, instance=article)  # 데이터를 넣은 다음에
+        if form.is_valid():  # 저장할만하면
+            article = form.save()  # 저장(작성)
+            return redirect(article)  # detail 페이지로 가기
+        '''    
+        else:  # 유효하지 않다면(form은 존재함)
+            return render(request, 'board/edit.html', {
+                'form': form,
+            })
+        '''
+    # 수정할께요 종이주세요
+    else:
+        # article = get_object_or_404(Article, id=id)
+        # embed()
+        form = ArticleModelForm(instance=article)
+    return render(request, 'board/edit.html', {
+        'form': form,
+    })        
+
+@require_GET
+def article_detail(request, article_id):
+    article = get_object_or_404(Article, id=article_id)
+    comments = article.comment_set.all()  # Comment.objects.filter(article_id=article.id)
+
+    return render(request, 'board/detail.html', {
+        'article': article,
+        'comments': comments,
+    })
+
+@require_POST
+def delete_article(request, article_id):
+    article = get_object_or_404(Article, id=article_id)
+    article.delete()
+    return redirect('board:article_list')
+
+@require_POST
+def new_comment(request):
+    article = get_object_or_404(Article, id=4)
+    comment = Comment()
+    comment.content = 'test comment'
+    comment.article_id = article.id
+    comment.save()
+    return redirect(article)
+    
+"""
+c = Comment()
+c.content = request.POST.get('content')
+c.article_id = 1
+c.save()
+"""
+```
+
+urls.py - id를 article_id로 수정함
+
+```python
+from django.urls import path
+from . import views
+
+app_name = 'board'
+
+urlpatterns = [
+    # path('', views.index, name='index'),  # /board/ == board:index
+    # Read 글 목록(list) render
+    path('articles/', views.article_list, name='article_list'),
+    # Read 글 상세(detail) render
+    path('articles/<int:article_id>/', views.article_detail, name='article_detail'),
+
+    # Create 글 쓰기(new) render
+    path('articles/new/', views.new_article, name='new_article'),
+    # # Create 글 저장(create)
+    # path('articles/create/', views.create, name='create'),
+
+    # Update 글 수정쓰기(edit) render
+    path('articles/<int:article_id>/edit/', views.edit_article, name='edit_article'),
+
+    # Delete 글 삭제(delete)
+    path('articles/<int:article_id>/delete', views.delete_article, name='delete_article'),
+
+    # Comment Create
+    path('comments/new/', views.new_comment, name='new_comment'),
+]
+```
+
+alt + 클릭 - 멀티커서
+
+
+
+detail.html
+
+```html
+{% extends 'board/base.html' %}
+{% block title %}Article detail{% endblock title %}
+
+{% block body %}
+    <h1>{{ article.title }}</h1>
+    <p>
+        {{ article.content }}
+    </p>
+    <div>
+        <a href="{% url 'board:edit_article' article.id %}">  <!-- 하드코딩 /board/articles/{{article.id}}/edit -->
+            <button>수정</button>
+        </a>    
+    </div>
+    <div>
+        <form action="{% url 'board:delete_article' article.id %}" method="POST">
+            {% csrf_token %}
+            {% comment %} <input type="submit" value="삭제" onclick="return confirm('ㄹㅇ?')"> {% endcomment %}
+            <input type="submit" value="삭제">
+        </form>
+    </div>
+
+    {% comment %} 가로선 {% endcomment %}
+    <hr> 
+
+    <form action="{% url 'board:new_comment' %}" method="POST">
+        {% csrf_token %}
+        <input type="text">
+        <input type="submit">
+    </form>
+
+    {% comment %} <script>
+        const delButton = document.querySelector('#delButton');
+        function writeHi () {
+            document.write('Hi');
+        }
+
+        delButton.addEventListener('mouseover', writeHi);
+    </script> {% endcomment %}
+    
+    {% if comments %}
+        <ul>
+            {% for comment in comments %}
+                <li>{{ comment.content }}</li>
+            {% endfor %}
+        </ul>
+    {% endif %}
+{% endblock body %}
 ```
 
