--- a/memo/20191010.md
+++ b/memo/20191010.md
@@ -1613,3 +1613,206 @@ detail.html
 {% endblock body %}
 ```
 
+
+
+
+
+detail.html
+
+```html
+{% extends 'board/base.html' %}
+{% block title %}Article detail{% endblock title %}
+
+{% block body %}
+    <h1>{{ article.title }}</h1>
+    <p>
+        {{ article.content }}
+    </p>
+    <div>
+        <a href="{% url 'board:edit_article' article.id %}">  <!-- 하드코딩 /board/articles/{{article.id}}/edit -->
+            <button>수정</button>
+        </a>    
+    </div>
+    <div>
+        <form action="{% url 'board:delete_article' article.id %}" method="POST">
+            {% csrf_token %}
+            {% comment %} <input type="submit" value="삭제" onclick="return confirm('ㄹㅇ?')"> {% endcomment %}
+            <input type="submit" value="삭제">
+        </form>
+    </div>
+
+    {% comment %} 가로선 {% endcomment %}
+    <hr> 
+
+    <form action="{% url 'board:new_comment' article.id %}" method="POST">
+        {% csrf_token %}
+        <input type="text" name="comment_content">
+        <input type="submit">
+    </form>
+
+    {% comment %} <script>
+        const delButton = document.querySelector('#delButton');
+        function writeHi () {
+            document.write('Hi');
+        }
+
+        delButton.addEventListener('mouseover', writeHi);
+    </script> {% endcomment %}
+    
+    {% if comments %}
+        <ul>
+            {% for comment in comments %}
+                <li>{{ comment.content }}</li>
+            {% endfor %}
+        </ul>
+    {% endif %}
+{% endblock body %}
+```
+
+
+
+views.py
+
+```python
+from django.shortcuts import render, redirect, get_object_or_404
+from django.views.decorators.http import require_GET, require_POST, require_http_methods
+
+from .models import Article, Comment
+from .forms import ArticleModelForm, CommentModelForm
+
+from IPython import embed
+
+# CRUD
+@require_http_methods(['GET', 'POST'])
+def new_article(request):
+    # 요청이 GET/POST 인지 확인한다.
+    # 만약 POST 라면
+    if request.method == 'POST':
+        # ArticleModelForm 의 인스턴스를 생성하고 Data 를 채운다(binding).
+        form = ArticleModelForm(request.POST)
+        # embed()  # 디버깅용
+        # binding 된 form 이 유효한지 체크한다.
+        if form.is_valid():
+            # 유효하다면 form 을 저장한다.
+            article = form.save()
+            # 저장한 article detail 로 redirect 한다.
+            return redirect(article)
+            # return redirect('board:article_detail', article.id)를 많이 써서
+            # models.py에 Article 클래스에 get_absolute_url 메서드가 있어서 줄일 수 있음
+        # form 이 유효하지 않다면,
+        # else:
+        #     # 유효하지 않은 입력데이터를 담은 HTML과 에러메세지를 사용자한테 보여준다.
+        #     return render(request, 'board/new.html', {
+        #         'form': form,
+        #     })
+
+    # GET 이라면
+    else: 
+        # 비어있는 form(HTML 생성기) 을 만든다.
+        form = ArticleModelForm()
+    # embed()
+        # form 과 html 을 사용자에게 보여준다.
+    return render(request, 'board/new.html', {
+        'form': form,
+    })
+
+@require_GET
+def article_list(request):
+    articles = Article.objects.all()
+    return render(request, 'board/list.html', {
+        'articles': articles,
+    })
+
+@require_http_methods(['GET', 'POST'])
+def edit_article(request, article_id):
+    # 게시글 찾기
+    article = get_object_or_404(Article, id=article_id)
+    # 제출할께요
+    if request.method == 'POST':  # 데이터가 날라왔다면
+        # 데이터 넘어온거 받는거
+        form = ArticleModelForm(request.POST, instance=article)  # 데이터를 넣은 다음에
+        if form.is_valid():  # 저장할만하면
+            article = form.save()  # 저장(작성)
+            return redirect(article)  # detail 페이지로 가기
+        '''    
+        else:  # 유효하지 않다면(form은 존재함)
+            return render(request, 'board/edit.html', {
+                'form': form,
+            })
+        '''
+    # 수정할께요 종이주세요
+    else:
+        # article = get_object_or_404(Article, id=id)
+        # embed()
+        form = ArticleModelForm(instance=article)
+    return render(request, 'board/edit.html', {
+        'form': form,
+    })        
+
+@require_GET
+def article_detail(request, article_id):
+    article = get_object_or_404(Article, id=article_id)
+    # .order_by('-id') 나중에 쓴게 먼저 나옴. 거꾸로 나옴
+    comments = article.comment_set.all().order_by('-id')  # Comment.objects.filter(article_id=article.id)
+
+    return render(request, 'board/detail.html', {
+        'article': article,
+        'comments': comments,
+    })
+
+@require_POST
+def delete_article(request, article_id):
+    article = get_object_or_404(Article, id=article_id)
+    article.delete()
+    return redirect('board:article_list')
+
+@require_POST
+def new_comment(request, article_id):  # /board/articles/N/comments/new/  |  /board/articles/1/comments/3/delete
+    article = get_object_or_404(Article, id=article_id)  # 사용자의 요청 검증
+    comment = Comment()
+    comment.content = request.POST.get('comment_content')
+    comment.article_id = article.id
+    comment.save()
+    return redirect(article)
+    
+"""
+c = Comment()
+c.content = request.POST.get('content')
+c.article_id = 1
+c.save()
+"""
+```
+
+
+
+urls.py
+
+```python
+from django.urls import path
+from . import views
+
+app_name = 'board'
+
+urlpatterns = [
+    # path('', views.index, name='index'),  # /board/ == board:index
+    # Read 글 목록(list) render
+    path('articles/', views.article_list, name='article_list'),
+    # Read 글 상세(detail) render
+    path('articles/<int:article_id>/', views.article_detail, name='article_detail'),
+
+    # Create 글 쓰기(new) render
+    path('articles/new/', views.new_article, name='new_article'),
+    # # Create 글 저장(create)
+    # path('articles/create/', views.create, name='create'),
+
+    # Update 글 수정쓰기(edit) render
+    path('articles/<int:article_id>/edit/', views.edit_article, name='edit_article'),
+
+    # Delete 글 삭제(delete)
+    path('articles/<int:article_id>/delete', views.delete_article, name='delete_article'),
+
+    # Comment Create
+    path('articles/<int:article_id>/comments/new/', views.new_comment, name='new_comment'),
+]
+```
+
