--- a/Algorithm/lecture/AlgorithmStudy/L02.md
+++ b/Algorithm/lecture/AlgorithmStudy/L02.md
@@ -662,85 +662,16 @@ int main() {
 }
 ```
 
-숫자피라미드 - 선생님이 도와주심
+숫자피라미드
 
 ```c
-#include <stdio.h>
 
-int main() {
-  int N, S;
-  scanf("%d%d", &N, &S);
-  
-  int arr[N][2*N-1];
-  
-  for(int i=0; i<N; i++) {
-    for(int j=0; j<2*(i+1)-1; j++) {
-      arr[i][j] = S;
-      S++;
-      if (S>9) {
-        S = 1;
-      }
-    }
-  }
-  
-  // for(int i=0; i<N; i++) {
-  //   for(int j=0; j<2*(i+1)-1; j++) {
-  //     printf("%d", arr[i][j]);
-  //   }
-  //   printf("\n");
-  // }
-  
-  for(int i=0; i<N; i++) {
-    for(int a=N-(i+1); a>0; a--) {
-      printf(" ");
-    }
-    
-    if((i+1)%2 == 1) {
-      for(int j=2*(i+1)-2; j>=0; j--) {
-        printf("%d", arr[i][j]);
-      }
-    }
-    
-    else {
-      for(int j=0; j<2*(i+1)-1; j++) {
-        printf("%d", arr[i][j]);
-      }
-    }
-    
-    printf("\n");
-  }
-  
-  return 0;
-}
 ```
 
 array1
 
 ```c
-#include <stdio.h>
 
-int main() {
-  int N, M;
-  scanf("%d%d", &N, &M);
-  int arr[N][M];
-  int n = 1;
-  
-  for(int i=0; i<N; i++) {
-    for(int j=0; j<M; j++) {
-      arr[i][j] = n;
-      n++;
-    }
-  }
-  
-  for(int i=0; i<N; i++) {
-    for(int j=0; j<M; j++) {
-      printf("%d ", arr[i][j]);
-    }
-    printf("\n");
-  }
-
-  return 0;
-}
 ```
 
 array2
