--- a/memo/20191014.md
+++ b/memo/20191014.md
@@ -345,3 +345,19 @@ git push
 
 
 embed() 지우기
+
+
+
+`django-admin startapp poll`
+
+`cd poll/`
+
+`touch urls.py forms.py`
+
+`mkdir -p templates/poll`
+
+`cd templates/poll/`
+
+`touch question_detail.html`
+
+`cd -`
