--- a/Algorithm/lecture/AlgorithmStudy/L03.md
+++ b/Algorithm/lecture/AlgorithmStudy/L03.md
@@ -28,7 +28,28 @@
 car
 
 ```c
+#include <stdio.h>
 
+int main() {
+	int n;
+	int car[5];
+	int cnt = 0;
+	
+	scanf("%d", &n);
+	for (int i = 0; i < 5; i++) {
+		scanf("%d", &car[i]);
+	}
+
+	for (int i = 0; i < 5; i++) {
+		if (car[i] == n) {
+			cnt += 1;
+		}
+	}
+
+	printf("%d", cnt);
+
+	return 0;
+}
 ```
 
 offset
