--- a/memo/20191015.md
+++ b/memo/20191015.md
@@ -88,6 +88,7 @@ models.py에 모델 생성
 
 ```python
 from django.db import models
+from django.urls import reverse
 
 class Posting(models.Model):
     content = models.TextField()
@@ -103,6 +104,7 @@ models.py
 
 ```python
 from django.db import models
+from django.urls import reverse
 
 class Posting(models.Model):
     content = models.TextField()
@@ -152,6 +154,7 @@ models.py에 view_count 지우기
 
 ```python
 from django.db import models
+from django.urls import reverse
 
 class Posting(models.Model):
     content = models.TextField()
@@ -214,6 +217,7 @@ models.py
 
 ```python
 from django.db import models
+from django.urls import reverse
 
 """
 $ python manage.py migrate <APP_NAME> zero
@@ -263,6 +267,7 @@ models.py
 
 ```python
 from django.db import models
+from django.urls import reverse
 
 """
 $ python manage.py migrate <APP_NAME> zero
@@ -395,7 +400,7 @@ models.py
 
 ```python
     def __str__(self):
-        return f'{self.pk}: {self.content[:10]}'
+        return f'{self.pk}: {self.content[:20]}'
 ```
 
 
@@ -447,5 +452,423 @@ def posting_detail(request, posting_id):
     return render(request, 'sns/posting_detail.html', {
         'posting': posting,
     })
+```
+
+
+
+https://getbootstrap.com/
+
+
+
+base.html
+
+```html
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <!-- Bootstrap CSS -->
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+    <!-- FonteAwesome icon set -->
+    <script src="https://kit.fontawesome.com/557ed3dfa5.js" crossorigin="anonymous"></script>
+    <title>{% block title %}{% endblock title %}</title>
+</head>
+<body>
+
+    <div class="container">
+        {% block body %}
+        {% endblock body %}
+    </div>
+
+    <!-- Bootstrap JS & Jquery -->
+    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
+</body>
+</html>
+
+```
+
+
+
+font awesome
+
+start for free
+
+```
+<script src="https://kit.fontawesome.com/1436f28108.js" crossorigin="anonymous"></script>
+```
+
+
+
+`git add .`
+
+`git commit -m 'SNS App model/templates/views/urls`
+
+
+
+posting_detail.html
+
+```html
+{% extends 'sns/base.html' %}
+
+{% block title %}{% endblock %}
+
+{% block body %}
+<div class="row mt-3">
+    <div class="col-12 col-md-6">
+        {% if posting.image %}{% endif %}
+    </div>
+</div>
+{% endblock %}
+```
+
+
+
+posting_list.html
+
+```html
+{% extends 'sns/base.html' %}
+
+{% block title %}{% endblock %}
+
+{% block body %}
+{% if postings %}
+    <section>
+        {% for posting in postings %}
+            <article>
+                {{ posting.content }}
+            </article>
+        {% endfor %}
+    </section>
+{% endif %}
+{% endblock %}
+```
+
+http://127.0.0.1:8000/newsfeed
+
+
+
+txt, pdf, jpeg 파일은 django에 저장되고 DB에는 주소 저장(장고 프로젝트 서버 안에 있는)
+
+파일 - pillow -- 파일주소(스트링) -- DB
+
+파일은 컴퓨터 안 디스크에 저장됨 
+
+
+
+views.py - create_posting 함수 추가
+
+```python
+@require_POST
+def create_posting(request):
+    posting = Posting()
+    # posting.content = 
+    # posting.save()
+    return redirect(posting)  # redirect('sns:posting_detail', posting.id)
+```
+
+
+
+posting_list.html
+
+```html
+{% extends 'sns/base.html' %}
+
+{% block title %}{% endblock %}
+{% block body %}
+<header>
+        <form action="">
+            <label for="content" class="sr-only">content</label>
+            <input id="content" type='text' name='content'>
+
+            <input id="image" name="image" type="file" accept="image/*">
+            <label for="image"></label>
+
+            <button type="submit" class="btn btn-primary">Submit</button>
+        </form>
+</header>
+
+{% if postings %}
+    <section>
+        {% for posting in postings %}
+            <article>
+                {{ posting.content }}
+            </article>
+        {% endfor %}
+    </section>
+{% endif %}
+{% endblock %}
+```
+
+
+
+urls.py
+
+```python
+from django.urls import path
+from . import views
+
+app_name = 'sns'
+
+urlpatterns = [
+    path('newsfeed', views.posting_list, name='posting_list'),
+    path('postings/<int:posting_id>/', views.posting_detail, name='posting_detail'),
+    path('postings/create/', views.create_posting, name='create_posting'),
+    
+]
+```
+
+
+
+posting_list.html
+
+```html
+{% extends 'sns/base.html' %}
+
+{% block title %}{% endblock %}
+{% block body %}
+<header>
+    <form action="{% url 'sns:create_posting' %}" enctype="multipart/form-data" method="POST">
+        {% csrf_token %}
+        <div class="form-row align-items center">
+            <label for="content" class="sr-only">content</label>
+            <input id="content" type='text' name='content'>
+
+            <input id="image" name="image" type="file" accept="image/*">
+            <label for="image"></label>
+
+            <button type="submit" class="btn btn-primary">Submit</button>
+        </div>
+    </form>
+</header>
+
+{% if postings %}
+    <section>
+        {% for posting in postings %}
+            <article>
+                {{ posting.content }}
+            </article>
+        {% endfor %}
+    </section>
+{% endif %}
+{% endblock %}
+```
+
+
+
+google
+
+form w3s - enctype 참고
+
+
+
+_header.html - header태그 잘라넣기
+
+```html
+
+```
+
+
+
+posting_list.html - header태그 있던 자리에 {% include 'sns/_header.html' %}
+
+```html
+{% extends 'sns/base.html' %}
+
+{% block title %}{% endblock %}
+{% block body %}
+
+{% include 'sns/_header.html' %}
+
+{% if postings %}
+    <section>
+        {% for posting in postings %}
+            <article>
+                {{ posting.content }}
+            </article>
+        {% endfor %}
+    </section>
+{% endif %}
+{% endblock %}
+```
+
+
+
+views.py - create_posting 함수
+
+```python
+@require_POST
+def create_posting(request):
+    posting = Posting()
+    posting.content = request.POST.get('content')
+    posting.icon = ''
+    posting.image = request.FILES.get('image')
+    posting.save()
+    
+    return redirect(posting)  # redirect('sns:posting_detail', posting.id)
+```
+
+
+
+settings.py에
+
+```python
+STATIC_URL = '/static/'  # 우리가 사용할 js/css/images
+```
+
+```python
+MEDIA_URL = '/media/'  # 찾을 위치
+MEDIA_ROOT = os.path.join(BASE_DIR, 'media')  # 서버 컴퓨터에 따라 /, \달라서  # 저장될 위치
+# print(BASE_DIR, '||', MEDIA_ROOT)
+```
+
+
+
+posting_detail.html
+
+```html
+{% extends 'sns/base.html' %}
+
+{% block title %}{% endblock %}
+
+{% block body %}
+<div class="row mt-3">
+    <div class="col-12 col-md-6">
+        {% if posting.image %}
+            {{ posting.image }}
+        {% endif %}
+    </div>
+</div>
+{% endblock %}
+```
+
+```html
+{% extends 'sns/base.html' %}
+
+{% block title %}{% endblock %}
+
+{% block body %}
+<div class="row mt-3">
+    <div class="col-12 col-md-6">
+        {% if posting.image %}
+            {{ posting.image.url }}
+        {% endif %}
+    </div>
+</div>
+{% endblock %}
+```
+
+urldecoder.org
+
+```html
+{% extends 'sns/base.html' %}
+
+{% block title %}{% endblock %}
+
+{% block body %}
+<div class="row mt-3">
+    <div class="col-12 col-md-6">
+        {% if posting.image %}
+            <img src="{{ posting.image.url }}" alt="{{ posting.image }}">
+        {% endif %}
+    </div>
+</div>
+{% endblock %}
+```
+
+`python manage.py migrate sns zero`
+
+`python manage.py migrate`
+
+http://127.0.0.1:8000/newsfeed
+
+
+
+image_upload - urls.py
+
+```python
+from django.contrib import admin
+from django.urls import path, include
+
+from django.conf.urls.static import static
+from django.conf import settings  # MASTER_APP/settings.py 불러오기
+
+urlpatterns = [
+    path('admin/', admin.site.urls),
+    path('', include('sns.urls')),  # sns.urls로 포워딩
+    # path('media', '/media/폴더 안에서 이미지를 찾아라.')
+]
+
+urlpatterns +=  static(settings.MEDIA_URL, document_root=settings.MEDIA_ROOT)  # 변수화 된 것을. 찾을 곳 / 실제로 저장되는 곳
+```
+
+http://127.0.0.1:8000/postings/1/
+
+
+
+
+
+* recap
+
+models.py
+
+```pytho
+image = models.ImageField(blank=True)  # $ pip install pillow
+```
+
+posting_list.html
+
+```html
+enctype="multipart/form-data"
+type="file"
+```
+
+views.py
+
+```python
+posting.image = request.FILES.get('image')
+```
+
+media에 파일 저장되고
+
+데이터베이스에는 파일 이름만 저장됨
+
+disk cpu .. media file 돈
+
+image_upload - urls.py
+
+```python
+urlpatterns +=  static(settings.MEDIA_URL, document_root=settings.MEDIA_ROOT)  # 변수화 된 것을. 찾을 곳 / 실제로 저장되는 곳
+```
+
+
+
+
+
+posting_list.html
+
+```html
+{% extends 'sns/base.html' %}
+
+{% block title %}{% endblock %}
+{% block body %}
+
+{% include 'sns/_header.html' %}
+
+{% if postings %}
+    <section>
+        {% for posting in postings %}
+            <article>
+                <a href="{{ posting.get_absolute_url }}">
+                    <img src="{{ posting.image.url }}" alt="{{ posting.image }}">
+                </a>
+            </article>
+        {% endfor %}
+    </section>
+{% endif %}
+{% endblock %}
 ```
 
